--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -79,7 +80,7 @@
 </head>
 <body>
   <h1>🌸 Date Cinema em Casa</h1>
-  <p>Escolha o jantar da noite e prepare-se para um momento especial!</p>
+  <p>Escolha o jantar da noite e vamos ficar tranquilinhos</p>
 
   <div class="form-box" id="formulario">
     <form onsubmit="event.preventDefault(); mostrarAgradecimento();">
@@ -114,8 +115,8 @@
   </div>
 
   <div id="agradecimento">
-    <h2>💌 Obrigado pela resposta!</h2>
-    <p>Ansioso pelo nosso momentinho juntos...</p>
+    <h2>💌 não tinha escolha melhor!</h2>
+    <p>vamos curtir o role e o chamego</p>
     <img src="obrigado.jpg" alt="Gatinho agradecendo">
   </div>
 </body>
