--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
   <div id="agradecimento">
     <h2>💌 não tinha escolha melhor!</h2>
+    🍽️ A escolha foi: {{comida_escolhida}}
     <p>vamos curtir o role e o chamego</p>
     <img src="obrigado.jpg" alt="Gatinho agradecendo">
   </div>
